# uclv_aruco_detection

./: README.md
uclv_aruco_detection/: CMakeLists.txt  package.xml
uclv_aruco_detection/config/: object_transformation.yaml
uclv_aruco_detection/launch/: pose_conversion.launch.py  pose_conversion_server.launch.py
uclv_aruco_detection/src/: aruco_marker_array_pub_test.cpp  multiple_poses_elaboration.cpp  pose_conversion.cpp  pose_conversion_server.cpp  pose_conversion_server_composable.cpp
uclv_aruco_detection/test/: test_server_client.cpp
uclv_aruco_detection_interfaces/: CMakeLists.txt  package.xml
uclv_aruco_detection_interfaces/srv/: PoseService.srv
